# mzhn-fsp-okr

./: README.md
ai-search/: Dockerfile  README.md  chain.py  chat_model.py  config.py  docker-compose.yml  main.py  pyproject.rocm.toml  pyproject.toml  switch.py
auth/: Makefile
auth/migrations/: 000001_init.up.sql
auth/proto/: auth.proto
backend/: docker-compose.yaml  event-service.yaml  example.env  nginx.conf
deployment/: ai-search.yaml  auth.yaml  docker-compose.yaml  event-service.yaml  example.env  nginx.conf  notification-service.yaml  notifications-cron.yaml  parser.yaml  rmq.yaml  subscriptions.yaml  telegram-bot.yaml
event-service/: Makefile  docker-compose.yaml  example.env  go.mod  go.sum
event-service/migrations/: 000001_init.down.sql  000001_init.up.sql  000002_soft_delete.down.sql  000002_soft_delete.up.sql
event-service/proto/: event-service.proto  subscriptions-service.proto
event-service/tests/: expired_token_test.go  refresh_test.go  register_login_profile_test.go  register_profile_test.go  (+1 more)
frontend-landing/: .eslintrc.json  README.md  docker-compose.yml  example.env  next.config.mjs  package-lock.json  package.json
frontend-main/: Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
notification-cron/: Dockerfile  Makefile  docker-compose.yaml  go.mod  go.sum
notification-service/: Makefile  docker-compose.yaml  go.mod
parser/: .gitignore  Dockerfile  README.md  cache.py  config.py  event_service_pb2.py  event_service_pb2_grpc.py  get_new_pdf.py  grpc_communitcation.py  lib.py  logger.py  main.py  process_pdf.py  pyproject.toml
proto/: event-service.proto  notifications-service.proto
subscriptions/: Dockerfile  Makefile  docker-compose.yaml  example.env  go.mod  go.sum
telegram-notificator-bot/: .env.example  .gitignore  .prettierrc  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  package-lock.json  package.json  tsconfig.json
(+243 files in other folders)
