[tool.poetry]
name = "ai-search"
version = "0.1.0"
description = ""
authors = ["Maxim Slipenko <no-reply@maxim.slipenko.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-core = "^0.3.20"
langchain-gigachat = "^0.3.0"
langserve = "^0.3.0"
fastapi = "^0.115.5"
langchain-community = "^0.3.7"
lark = "^1.2.2"
sse-starlette = "^2.1.3"
uvicorn = "^0.32.1"

[tool.poetry.group.ollama]
optional = true

[tool.poetry.group.ollama.dependencies]
langchain-ollama = "^0.2.0"
ollama = "<0.4.0"

[tool.poetry.group.huggingface]
optional = true

[tool.poetry.group.huggingface.dependencies]
sentence-transformers = "^2.2.2"
langchain-huggingface = "^0.1.2"

[tool.poetry.dev-dependencies]
black = "^24.10.0"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
